--- a/configure/playbooks/roles/test-multiple_xnat_users/tasks/main.yml
+++ b/configure/playbooks/roles/test-multiple_xnat_users/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: "Download project data if we do not have a local copy"
+  ansible.builtin.include_tasks: ./roles/setup_xnat_project/tasks/download_data.yml
+
 - name: "Set up XNAT users and their projects"
   ansible.builtin.include_tasks: setup_single_testuser.yml
   loop: "{{ range(1, n_users + 1) | list }}"
