Make sure `n_users` is an `int` for the loop
Makes the playbook compatible with the `run_tests.sh` script variable
`N_USERS`.

--- a/configure/playbooks/roles/test-multiple_xnat_users/tasks/main.yml
+++ b/configure/playbooks/roles/test-multiple_xnat_users/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: "Set up XNAT users and their projects"
   ansible.builtin.include_tasks: setup_single_testuser.yml
-  loop: "{{ range(1, n_users + 1) | list }}"
+  loop: "{{ range(1, n_users | int + 1) | list }}"
   loop_control:
     loop_var: user_id
   vars:
@@ -37,7 +37,7 @@
       --inventory ../hosts.yml --host xnat_web --netrc {{ netrc_file }}
   register: upload_data
   changed_when: upload_data.failed != false
-  loop: "{{ range(1, n_users + 1) | list }}"
+  loop: "{{ range(1, n_users | int + 1) | list }}"
   loop_control:
     loop_var: user_id
   vars:
