Explicitly list python requirements

--- a/configure/playbooks/roles/setup_xnat_project/tasks/upload_data.yml
+++ b/configure/playbooks/roles/setup_xnat_project/tasks/upload_data.yml
@@ -1,11 +1,18 @@
 - name: "Install necessary Python dependencies on host"
   ansible.builtin.pip:
-    requirements: requirements.txt
+    name:
+      - ansible
+      - boto3
+      - tqdm
+      - typer[all]>=0.9
+      - xnat
+  tags: test
 
 - name: "Run upload_data.py script"
   ansible.builtin.script:
-    cmd: upload_data.py --metadata {{ xnat_project_data.sessions_metadata }} \
-      --data {{ xnat_project_data.unzip_target }} --inventory hosts.yml --host xnat_web \
+    cmd: upload_data.py --metadata {{ xnat_project_data.sessions_metadata }}
+      --data {{ xnat_project_data.unzip_target }} --inventory hosts.yml --host xnat_web
       --netrc {{ xnat_project_data.credentials_file }}
   args:
     executable: python3
+  tags: test
