Make sure we user the zip file on the remote for unarchiving

--- a/configure/playbooks/roles/setup_xnat_project/tasks/download_data.yml
+++ b/configure/playbooks/roles/setup_xnat_project/tasks/download_data.yml
@@ -32,3 +32,4 @@
         src: "{{ xnat_project_data.zip_file }}"
         dest: "{{ xnat_project_data.unzip_target }}"
         mode: "0644"
+        remote_src: true
