Add mount_efs role and remove tasks from provision role

--- a/configure/playbooks/install_xnat.yml
+++ b/configure/playbooks/install_xnat.yml
@@ -15,6 +15,7 @@
 
   roles:
     - { role: provision }
+    - role: mount_efs
     - { role: mirsg.install_python }
     - { role: java }
     - { role: tomcat }
