--- a/configure/group_vars/all/vars/general.yml
+++ b/configure/group_vars/all/vars/general.yml
@@ -27,9 +27,8 @@ monitoring_service_enabled: false
 container_service_enabled: true
 container_service_remote_xnat_root: "/storage/data/xnat"
 
-efs_mount:
-  src: "{{ hostvars[inventory_hostname]['efs_hostname'] }}:/"
-  directory: "{{ EXTERNAL_STORAGE_DRIVE }}"
-  fstype: "nfs4"
-  opts: "nfsvers=4.1,rsize=1048576,hard,timeo=600,retrans=2,noresvport"
-  state: mounted
+mount_efs_src: "{{ hostvars[inventory_hostname]['efs_hostname'] }}:/"
+mount_efs_directory: "{{ EXTERNAL_STORAGE_DRIVE }}"
+mount_efs_fstype: "nfs4"
+mount_efs_opts: "nfsvers=4.1,rsize=1048576,hard,timeo=600,retrans=2,noresvport"
+mount_efs_state: mounted
