use mirsg.infrastructure colleciton
use version 1.20.0

--- a/configure/group_vars/xnat/vars/xnat.yml
+++ b/configure/group_vars/xnat/vars/xnat.yml
@@ -68,12 +68,15 @@ xnat_common_config:
   par: false
   primaryAdminUsername: "{{ xnat_service_admin.username }}"
   receivedFileUser: "{{ xnat_service_admin.username }}"
-  ipsThatCanSendEmailsThroughRest: "127.0.0.1"
+  ipsThatCanSendEmailsThroughRest: 127.0.0.1
   sessionXmlRebuilderInterval: "5"
   # "^.*$" for all IPs
-  enabledProviders: ["localdb"]
+  enabledProviders:
+    - localdb
   enableSitewideAnonymizationScript: true
-  sitewideAnonymizationScript: "//\nversion \"6.1\"\nproject != \"Unassigned\" ? (0008,1030) := project\n(0010,0010) := subject\n(0010,0020) := session"
+  sitewideAnonymizationScript:
+    //\nversion \"6.1\"\nproject != \"Unassigned\" ? (0008,1030) :=
+    project\n(0010,0010) := subject\n(0010,0020) := session
 
 # XNAT configuration
 xnat_config:
