--- a/configure/playbooks/roles/xnat/tasks/configure.yml
+++ b/configure/playbooks/roles/xnat/tasks/configure.yml
@@ -8,9 +8,9 @@
     state: started
     enabled: true
 
-- name: "Waiting for Tomcat to start - this could take several minutes: {{ xnat_web_server.url }}"
+- name: "Waiting for Tomcat to start - this could take several minutes: {{ web_server.url }}"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}"
+    url: "{{ web_server.url }}"
     method: GET
     validate_certs: "{{ ssl.validate_certs }}"
   register: _result
@@ -27,7 +27,7 @@
 # Subsequently, this should return 401 indicating the password has already been changed and/or the account is disabled.
 - name: "Checking if the default admin credentials are the default values"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/siteConfig"
+    url: "{{ web_server.url }}/xapi/siteConfig"
     user: "admin"
     password: "admin"
     method: GET
@@ -38,7 +38,7 @@
 # If the previous call succeeded, it means the default admin password has not yet been changed so we change it now
 - name: "Changing default admin password"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/admin"
+    url: "{{ web_server.url }}/xapi/users/admin"
     user: "admin"
     password: "admin"
     method: PUT
@@ -57,7 +57,7 @@
 # If user is not found (404 or 500) then the service_admin has not yet been created and the default admin is still enabled
 - name: "Check existence of service admin user using default admin"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/{{ xnat_service_admin.username }}"
+    url: "{{ web_server.url }}/xapi/users/{{ xnat_service_admin.username }}"
     user: "admin"
     password: "{{ xnat_config.admin_password }}"
     method: GET
@@ -68,7 +68,7 @@
 # If the above service_admin_check failed with a non-authentication error (404, 500), then we create the service account
 - name: "Create service admin user"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/"
+    url: "{{ web_server.url }}/xapi/users/"
     user: "admin"
     password: "{{ xnat_config.admin_password }}"
     method: POST
@@ -89,7 +89,7 @@
 # Ensure that the created service_admin user has the correct admin role
 - name: "Set service admin user roles"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/{{ xnat_service_admin.username }}/roles/Administrator"
+    url: "{{ web_server.url }}/xapi/users/{{ xnat_service_admin.username }}/roles/Administrator"
     user: "admin"
     password: "{{ xnat_config.admin_password }}"
     method: PUT
@@ -100,7 +100,7 @@
 # Ensure that the created service_admin user is non-expiring
 - name: "Set service admin account to non-expiring"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/{{ xnat_service_admin.username }}/roles/non_expiring"
+    url: "{{ web_server.url }}/xapi/users/{{ xnat_service_admin.username }}/roles/non_expiring"
     user: "admin"
     password: "{{ xnat_config.admin_password }}"
     method: PUT
@@ -111,7 +111,7 @@
   # Give the created service_admin access to all data
 - name: "Set service admin role to all data admin"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/{{ xnat_service_admin.username }}/groups/ALL_DATA_ADMIN"
+    url: "{{ web_server.url }}/xapi/users/{{ xnat_service_admin.username }}/groups/ALL_DATA_ADMIN"
     user: "admin"
     password: "{{ xnat_config.admin_password }}"
     method: PUT
@@ -122,7 +122,7 @@
 # All further admin actions can then be undertaken using the new service_admin
 - name: "XNAT configuration"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/siteConfig"
+    url: "{{ web_server.url }}/xapi/siteConfig"
     user: "{{ xnat_service_admin.username }}"
     password: "{{ xnat_service_admin.password }}"
     method: POST
@@ -135,7 +135,7 @@
 # The default admin is disabled once it is verified that the service_admin works
 - name: "Disable default admin user"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/admin"
+    url: "{{ web_server.url }}/xapi/users/admin"
     user: "{{ xnat_service_admin.username }}"
     password: "{{ xnat_service_admin.password }}"
     method: PUT
@@ -149,7 +149,7 @@
 
 - name: "Disable the guest user"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/guest"
+    url: "{{ web_server.url }}/xapi/users/guest"
     user: "{{ xnat_service_admin.username }}"
     password: "{{ xnat_service_admin.password }}"
     method: PUT
@@ -163,7 +163,7 @@
 
 - name: "Store automation scripts"
   ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/data/automation/scripts/{{ item.id }}"
+    url: "{{ web_server.url }}/data/automation/scripts/{{ item.id }}"
     user: "{{ xnat_service_admin.username }}"
     password: "{{ xnat_service_admin.password }}"
     method: PUT
