--- a/configure/group_vars/all/vars/general.yml
+++ b/configure/group_vars/all/vars/general.yml
@@ -20,15 +20,9 @@ server_locale: "en_GB.UTF-8"
 selinux_enabled: true
 
 # Mount point for external storage
-EXTERNAL_STORAGE_DRIVE: "/storage"
-
-# Infrastructure
-monitoring_service_enabled: false
-container_service_enabled: true
-container_service_remote_xnat_root: "/storage/data/xnat"
-
+external_storage_drive: "/storage"
 mount_efs_src: "{{ hostvars[inventory_hostname]['efs_hostname'] }}:/"
-mount_efs_directory: "{{ EXTERNAL_STORAGE_DRIVE }}"
+mount_efs_directory: "{{ external_storage_drive }}"
 mount_efs_fstype: "nfs4"
 mount_efs_opts: "nfsvers=4.1,rsize=1048576,hard,timeo=600,retrans=2,noresvport"
 mount_efs_state: mounted
