--- a/configure/group_vars/all/vars/xnat.yml
+++ b/configure/group_vars/all/vars/xnat.yml
@@ -1,13 +1,13 @@
 ---
 # web server VM
-xnat_web_server:
+web_server:
   host: "{{ hostvars['xnat_web']['ansible_host'] }}"
   url: "http://{{ hostvars['xnat_web']['ansible_host'] }}"
   ip: "{{ hostvars['xnat_web']['private_ip'] }}"
-  storage_dir: "{{ EXTERNAL_STORAGE_DRIVE }}/data"
+  storage_dir: "{{ external_storage_drive }}/data"
 
 # database server VM
-xnat_db:
+db_server:
   host: "{{ hostvars['xnat_web']['database_hostname'] }}"
   port: "{{ hostvars['xnat_web']['database_port'] }}"
   postgres_xnat_database: "{{ hostvars['xnat_web']['database_name'] }}"
