--- a/configure/playbooks/roles/xnat/tasks/directories.yml
+++ b/configure/playbooks/roles/xnat/tasks/directories.yml
@@ -1,19 +1,19 @@
 ---
 - name: Ensure XNAT external storage subdirectory exists
   ansible.builtin.file:
-    path: "{{ xnat_web_server.storage_dir }}"
+    path: "{{ web_server.storage_dir }}"
     owner: "{{ xnat.owner }}"
     group: "{{ xnat.group }}"
     state: directory
     mode: 0700
-  when: xnat_create_data_directory and EXTERNAL_STORAGE_DRIVE is defined
+  when: xnat_create_data_directory and external_storage_drive is defined
 
-- name: Ensure there is a symbolic link from {{ xnat_data_dir }} to external storage {{ xnat_web_server.storage_dir }}
+- name: Ensure there is a symbolic link from {{ xnat_data_dir }} to external storage {{ web_server.storage_dir }}
   ansible.builtin.file:
-    src: "{{ xnat_web_server.storage_dir }}"
+    src: "{{ web_server.storage_dir }}"
     dest: "{{ xnat_data_dir }}"
     state: link
-  when: xnat_create_data_directory and EXTERNAL_STORAGE_DRIVE is defined
+  when: xnat_create_data_directory and external_storage_drive is defined
 
 - name: "Ensure XNAT subdirectories exist"
   ansible.builtin.file:
