Remove python3-requests before installing python dependencies

--- a/configure/playbooks/roles/setup_xnat_project/tasks/upload_data.yml
+++ b/configure/playbooks/roles/setup_xnat_project/tasks/upload_data.yml
@@ -1,3 +1,8 @@
+- name: Remove python3-requests
+  ansible.builtin.yum:
+    name: python3-requests
+    state: absent
+
 - name: "Install necessary Python dependencies on host"
   ansible.builtin.pip:
     name:
