Use mirsg infra collection (#108)
Fixes #106 
Fixes #102 

Use Ansible roles from the `mirsg.infrastructure` Collection for
installing / configuring XNAT.

- Includes changes from previous
[PR](https://github.com/UCL-MIRSG/xnat-aws/pull/106)
- add role to mount EFS (this was previously part of the provision role,
but the `mirsg.infrastructure.provision` role is used instead)
- remove unused roles and playbooks
- add a template for the nginx config for use by the
`mirsg.infrastructure.nginx` role
- `mirsg.infrastructure` include a fix for #102 (the Docker version is
pinned to <25)

There are a **lot** of changes here, but they are all internal (i.e.
there are no changes in how to use this repo, and users shouldn't need
to update their `terraform.tfvars` files etc.)

---------

Co-authored-by: Paul Smith <paul.j.smith@ucl.ac.uk>
Co-authored-by: ruaridhg <ruaridhg@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/configure/playbooks/roles/requirements.yml
+++ b/configure/playbooks/roles/requirements.yml
@@ -1,17 +1,8 @@
 ---
 collections:
-  - community.general
-  - ansible.posix
-  - community.docker
-  - community.crypto
-  - amazon.aws
-
-roles:
-
-  - src: https://github.com/UCL-MIRSG/ansible-role-install-python.git
-    version: 2023.02.9.0
-    name: mirsg.install_python
-
-  - src: https://github.com/UCL-MIRSG/ansible-role-ssl-certificates.git
-    version: 2023.02.8.0
-    name: mirsg.ssl_certificates
+  - name: ansible.posix
+  - name: amazon.aws
+  - name: mirsg.infrastructure
+    type: git
+    source: https://github.com/UCL-MIRSG/ansible-collection-infra.git
+    version: 1.22.0
