Init docker swarm

--- a/configure/playbooks/install_xnat.yml
+++ b/configure/playbooks/install_xnat.yml
@@ -25,6 +25,7 @@
     - role: mirsg.infrastructure.provision
     - role: mirsg.infrastructure.install_python
     - role: mirsg.infrastructure.docker
+    - role: configure_docker_swarm
 
 - name: Setup Container Service on clients (i.e. the web servers)
   hosts: container_service_client
