--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,5 +1,5 @@
 ---
-name: 'Terraform'
+name: "Terraform"
 
 on:
   push:
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: "Terraform"
     runs-on: ubuntu-latest
 
     # Use the Bash shell regardless whether the GitHub Actions
@@ -31,7 +31,6 @@ jobs:
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3
         with:
           terraform_version: 1.3.9
-
 
       # Generate credentials for Terraform
       - name: Terraform Credentials
