--- a/configure/group_vars/container_service_client.yml
+++ b/configure/group_vars/container_service_client.yml
@@ -2,7 +2,8 @@
 # mirsg.xnat_container_service
 xnat_container_service_name: Container Service
 xnat_container_service_url: "{{ web_server.url }}/xapi/docker/server"
-xnat_container_service_client_hostname: "{{ hostvars['xnat_web']['ansible_host'] }}"
+xnat_container_service_client_hostname:
+  "{{ hostvars['xnat_web']['ansible_host'] }}"
 xnat_container_service_validate_certs: "{{ ssl.validate_certs }}"
 
 xnat_container_service_hostname: "{{ docker_server_hostname }}"
